--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body {
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 1.7rem;
 }
 
 .selected {
@@ -47,7 +47,7 @@ a:visited {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 15px;
+    gap: 8px;
     margin-top: 0px;
 }
 
@@ -129,11 +129,34 @@ svg {
     justify-content: space-around;
     border: 2px solid var(--dark);
     border-radius: 10px;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 600;
 }
 
 .card:hover {
     background-color: var(--dark);
     color: var(--background);
+    transition: .3s ease-in-out;
+}
+
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    color: var(--background);
+    background-color: var(--dark);
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 7px;
+}
+
+.footer h3 {
+    margin: 5px;
 }
