--- a/main.css
+++ b/main.css
@@ -9,6 +9,11 @@ body {
     background-color: var(--background);
     font-family: "Young Serif";
     margin: 0;
+    position: relative;
+}
+
+.book-body {
+    height: 99vh;
 }
 
 .header {
@@ -118,19 +123,44 @@ svg {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    margin-bottom: 100px;
     /* border: 2px solid var(--dark); */
 }
 
 .card {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     gap: 0px;
     width: 70%;
-    justify-content: space-around;
+    justify-content: space-evenly;
     border: 2px solid var(--dark);
     border-radius: 10px;
     font-size: 1.4rem;
     font-weight: 600;
+}
+
+.card p {
+    width: 28%;
+    margin-top: 23px;
+    margin-bottom: 23px
+}
+
+.city {
+    width: 20%;
+    margin-left: 65px;
+}
+
+.date, .time {
+    width: 10%;
+    text-align: right;
+}
+
+.venue {
+    margin-left: 25px;
+}
+
+.date {
+    margin-right: 25px;
 }
 
 .card:hover {
@@ -148,6 +178,10 @@ svg {
     align-items: center;
     justify-content: center;
     margin-top: 20px;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    /* margin-top: 50px; */
 }
 
 .footer-content {
@@ -160,3 +194,173 @@ svg {
 .footer h3 {
     margin: 5px;
 }
+
+@media (max-width: 480px) {
+    
+    .book-body {
+        height: 99vh;
+    }
+    
+    .header {
+        display: flex;
+        width: 100vh;
+        justify-content: space-around;
+        align-items: flex-start;
+        margin-top: 0px;
+        background-color: var(--dark);
+    }
+    
+    h1 {
+        font-size: 1.4rem;
+    }
+    
+    a .h1 {
+        color: var(--background);
+    }
+    
+    .rtg-pic {
+        height: auto;
+        width: 50%;
+        filter: drop-shadow(0px 4px 15px rgba(0, 0, 0, 0.4));
+        z-index: 20;
+        transform: translate(0px -50px);
+    }
+    
+    .nav-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 8px;
+        margin-top: 0px;
+    }
+    
+    .nav {
+        display: flex;
+        gap: 100px;
+    }
+    
+    .socials {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+    
+    svg {
+        transform: scale(.8);
+      }
+    
+    .image-container {
+        background-color: grey;
+        width: 100%;
+        height: 230px;
+        overflow: hidden;
+        display: flex;
+        /* position: absolute; */
+        top: 200px;
+    }
+    
+    .jake, .jakeandfinn, .finn, .berkshire {
+        display: none;
+    }
+
+    .jake {
+        /* display: block; */
+        height: auto;
+        object-fit: cover;
+    }
+    
+    .shows {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+    }
+    
+    .cards-container {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 100px;
+        /* border: 2px solid var(--dark); */
+    }
+    
+    .card {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0px;
+        width: 80%;
+        justify-content: space-evenly;
+        border: 2px solid var(--dark);
+        border-radius: 10px;
+        font-size: 1.4rem;
+        font-weight: 600;
+    }
+    
+    .card p {
+        /* width: 50%; */
+        text-align: center;
+    }
+    
+    .city {
+        order: 4;
+        /* width: 20%; */
+        /* margin-left: 65px; */
+    }
+    
+    .date, .time {
+        width: 5%;
+        text-align: center;
+        margin-bottom: 5px;
+        height: 5%;
+    }
+
+    .city, .venue {
+        width: 100%;
+        height: 0%;
+    }
+    
+    .venue {
+        order: 3;
+        /* margin-left: 25px; */
+    }
+
+    .time {
+        order: 2;
+    }
+    
+    .date {
+        order: 1;
+        /* margin-right: 25px; */
+    }
+    
+    
+    .footer {
+        display: flex;
+        flex-direction: column;
+        color: var(--background);
+        background-color: var(--dark);
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+        position: absolute;
+        bottom: 0px;
+        width: 100%;
+        /* margin-top: 50px; */
+    }
+    
+    .footer-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 7px;
+    }
+    
+    .footer h3 {
+        margin: 5px;
+    }
+
+  }
