--- a/main.css
+++ b/main.css
@@ -24,6 +24,10 @@ body {
     margin-top: 20px;
 }
 
+.header-mobile {
+    display: none;
+}
+
 h1 {
     font-size: 1.7rem;
 }
@@ -199,15 +203,25 @@ svg {
     
     .book-body {
         height: 99vh;
+        /* width: 100vw; */
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
     }
     
-    .header {
+    .header-mobile {
         display: flex;
-        width: 100vh;
+        width: 55vh;
+        flex-direction: column;
         justify-content: space-around;
-        align-items: flex-start;
+        align-items: center;
         margin-top: 0px;
-        background-color: var(--dark);
+        /* background-color: var(--dark); */
+    }
+
+    .header {
+        display: none;
     }
     
     h1 {
@@ -216,11 +230,12 @@ svg {
     
     a .h1 {
         color: var(--background);
+        color: white;
     }
     
     .rtg-pic {
         height: auto;
-        width: 50%;
+        width: 80%;
         filter: drop-shadow(0px 4px 15px rgba(0, 0, 0, 0.4));
         z-index: 20;
         transform: translate(0px -50px);
@@ -230,13 +245,14 @@ svg {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        gap: 8px;
+        gap: 0px;
         margin-top: 0px;
     }
     
     .nav {
         display: flex;
-        gap: 100px;
+        gap: 50px;
+        background-color: var(--dark);
     }
     
     .socials {
@@ -244,6 +260,18 @@ svg {
         justify-content: center;
         align-items: center;
         gap: 20px;
+        width: 100vw;
+    }
+
+    .hero-container {
+        background-image: url(images/beaverfest.jpg);
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100vw;
+        height: 400px;
     }
     
     svg {
@@ -251,23 +279,11 @@ svg {
       }
     
     .image-container {
-        background-color: grey;
-        width: 100%;
-        height: 230px;
-        overflow: hidden;
-        display: flex;
-        /* position: absolute; */
-        top: 200px;
-    }
-    
-    .jake, .jakeandfinn, .finn, .berkshire {
         display: none;
     }
-
-    .jake {
-        /* display: block; */
-        height: auto;
-        object-fit: cover;
+    
+    .bf, .jake, .jakeandfinn, .finn, .berkshire {
+        display: none;
     }
     
     .shows {
